--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 
                 <div class="w3-col m6">
                     <p>
-                    <form action="https://formspree.io/f/mvolqvpv" target="_blank" method="POST">
+                    <form action="https://formspree.io/f/mnqrabdl" target="_blank" method="POST">
                         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
                             <div class="w3-half">
                                 <input class="w3-input w3-border" type="text" placeholder="Name" name="Name">
