--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="w3-display-container bgimg">
             <canvas id="network"></canvas>
             <div class="w3-container w3-display-topmiddle" style="margin-top: 40px">
-                <img src="images/.jpg.jpg" alt="Boss" style="width:100%;box-shadow: 5px 5px 20px #BBBBBB ;"
+                <img src="images/Priya.jpeg" alt="Priya" style="width:100%;box-shadow: 5px 5px 20px #BBBBBB ;"
                     class="w3-circle">
             </div>
             <div class="w3-display-middle" style="margin-top: 16%;">
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="w3-container w3-display-bottommiddle" style="width: 50%; margin-bottom: 9%">
-                <!-- <h3 class="w3-center" style="color:black; font-family: Satisfy">Naresh Nagabushan</h3> -->
+                <!-- <h3 class="w3-center" style="color:black; font-family: Satisfy">Priya Chaurasiya</h3> -->
                 <div class="w3-row-padding">
                     <div class="w3-quarter">
                         <a href="https://github.com/Priya-38"><i
@@ -115,7 +115,7 @@
             </div>
             <!-- <div class="w3-display-bottommiddle"
                     style="font-size: 13px; margin-left:7%; width: 60%; margin-bottom: 2%"><br />Copyright (c) 2017
-                    Naresh Nagabushan</div>
+                    Priya Chaurasiya</div>
             </div> -->
     </nav>
 
@@ -707,8 +707,8 @@
         </div>
 
         <div style="display:none;">
-            <a href="http://www.clustrmaps.com/map/Naresh1318.github.io"
-                title="Visit tracker for Naresh1318.github.io"><img
+            <a href="http://www.clustrmaps.com/map/Priya-38.github.io"
+                title="Visit tracker for Priya-38.github.io"><img
                     src="//www.clustrmaps.com/map_v2.png?d=QLZXmB8gTUnBObSP0O2JoAd0cXaME8cM5-74QQePvnA" /></a>
         </div>
 
@@ -718,11 +718,11 @@
             <a href="https://github.com/Priya-38"><i class="fa fa-github w3-hover-opacity w3-xlarge"></i></a>
             <a href="https://www.linkedin.com/in/priya38/"><i class="fa fa-linkedin w3-hover-opacity w3-xlarge"></i></a>
             <a href="https://twitter.com/Priya_38"><i class="fa fa-twitter w3-hover-opacity w3-xlarge"></i></a>
-            <!--<a href="https://www.facebook.com/rnaresh.n"><i
-                    class="fa fa-facebook-official w3-hover-opacity w3-xlarge"></i></a>
+            <!--<a href="https://www.facebook.com/priya.n"><i
+                    class="fa fa-facebook-official w3-hover-opacity w3-xlarge"></i></a>-->
             <br>
-            <p class="w3-small">Copyright (c) 2017 Naresh Nagabushan</p>
-             End footer -->
+            <p class="w3-small">Copyright (c) 2022 Priya Chaurasiya</p>
+             End footer 
         </footer>
 
         <!-- END PAGE CONTENT -->
