--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
                 </div>
             </div>
-            <!-- <div class="w3-display-bottommiddle"
-                    style="font-size: 13px; margin-left:7%; width: 60%; margin-bottom: 2%"><br />Copyright (c) 2017
+            <div class="w3-display-bottommiddle"
+                    style="font-size: 13px; margin-left:7%; width: 60%; margin-bottom: 2%"><br />Copyright &#169; 2017
                     Priya Chaurasiya</div>
-            </div> -->
+            </div>
     </nav>
 
     <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
@@ -721,8 +721,8 @@
             <!--<a href="https://www.facebook.com/priya.n"><i
                     class="fa fa-facebook-official w3-hover-opacity w3-xlarge"></i></a>-->
             <br>
-            <p class="w3-small">Copyright (c) 2022 Priya Chaurasiya</p>
-             End footer 
+            <p class="w3-small">Copyright &#169; 2022 Priya Chaurasiya</p>
+<!--              End footer  -->
         </footer>
 
         <!-- END PAGE CONTENT -->
