--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                 our lives.
             </p>
 
-            <img src="images/Me%20_2.jpg" alt="boss" class="w3-image w3-hide-large w3-hide-small w3-circle"
+            <img src="images/Priya.jpeg" alt="Priya" class="w3-image w3-hide-large w3-hide-small w3-circle"
                 style="display:block;width:60%;margin:auto;box-shadow: 5px 5px 20px #BBBBBB;">
-            <img src="images/Me%20_2.jpg" alt="boss" class="w3-image w3-hide-large w3-hide-medium w3-circle"
+            <img src="images/Priya.jpeg" alt="Priya" class="w3-image w3-hide-large w3-hide-medium w3-circle"
                 width="1000" height="1333" style="box-shadow: 5px 5px 20px #BBBBBB; width:60%; margin-left: 20%;">
 
             <!-- About Small amd medium screen -->
