mail to configured

--- a/index.html
+++ b/index.html
@@ -733,8 +733,8 @@
                         Delhi<br>
                     </p>
                     <p>
-                        <i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right" style="width:30px"> </i> Email:
-                        pchaurasiya925@gmail.com<br>
+                        <i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right" style="width:30px"> </i> <a href = "mailto: pchaurasiya925@gmail.com">
+                            pchaurasiya925@gmail.com</a>
                     </p>
                 </div>
 
